@@ -1,12 +1,12 @@
 package io.antmedia.test;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.BufferedReader;
 import java.io.File;
@@ -24,20 +24,19 @@ import java.util.Queue;
 
 import org.apache.catalina.util.NetMask;
 import org.apache.commons.lang3.RandomUtils;
-import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 import org.json.simple.parser.JSONParser;
 import org.json.simple.parser.ParseException;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.red5.server.scope.WebScope;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.ApplicationContext;
 import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.annotation.DirtiesContext.ClassMode;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.AbstractJUnit4SpringContextTests;
-
-import com.amazonaws.RequestClientOptions;
-import com.google.gson.Gson;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import io.antmedia.AntMediaApplicationAdapter;
 import io.antmedia.AppSettings;
@@ -46,8 +45,11 @@ import io.antmedia.rest.RestServiceBase;
 
 @ContextConfiguration(locations = { "test.xml" })
 @DirtiesContext(classMode = ClassMode.AFTER_EACH_TEST_METHOD)
-public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
+@ExtendWith(SpringExtension.class)
+public class AppSettingsUnitTest {
 
+	@Autowired
+	private ApplicationContext applicationContext;
 
 	protected WebScope appScope;
 	static {
@@ -62,7 +64,7 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		if (appScope == null) 
 		{
 			appScope = (WebScope) applicationContext.getBean("web.scope");
-			assertTrue(appScope.getDepth() == 1);
+            assertEquals(1, appScope.getDepth());
 		}
 
 		AppSettings appSettings = (AppSettings) applicationContext.getBean("app.settings");
@@ -71,18 +73,18 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		assertEquals("6", appSettings.getDashSegDuration());
 
 		assertEquals("stun:stun1.l.google.com:19302", appSettings.getStunServerURI());
-		assertEquals(false, appSettings.isWebRTCTcpCandidatesEnabled());
+        assertFalse(appSettings.isWebRTCTcpCandidatesEnabled());
 		assertEquals("", appSettings.getEncoderName());
 		assertEquals(480, appSettings.getPreviewHeight());
 		assertFalse(appSettings.isUseOriginalWebRTCEnabled());
 		assertEquals(5000, appSettings.getCreatePreviewPeriod());
 
 		//check default value
-		assertEquals(false, appSettings.isForceAspectRatioInTranscoding());
+        assertFalse(appSettings.isForceAspectRatioInTranscoding());
 		appSettings.setForceAspectRatioInTranscoding(true);
-		assertEquals(true, appSettings.isForceAspectRatioInTranscoding());
+        assertTrue(appSettings.isForceAspectRatioInTranscoding());
 		appSettings.setForceAspectRatioInTranscoding(false);
-		assertEquals(false, appSettings.isForceAspectRatioInTranscoding());
+        assertFalse(appSettings.isForceAspectRatioInTranscoding());
 
 		Queue<NetMask> allowedCIDRList = appSettings.getAllowedCIDRList();
 		System.out.println("allowedCIDRList ->" + allowedCIDRList.size());
@@ -102,9 +104,9 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		assertEquals("turnservercredential", appSettings.getTurnServerCredential());
 
 
-		assertEquals(false, appSettings.isRtmpPlaybackEnabled());
+        assertFalse(appSettings.isRtmpPlaybackEnabled());
 		appSettings.setRtmpPlaybackEnabled(true);
-		assertEquals(true, appSettings.isRtmpPlaybackEnabled());
+        assertTrue(appSettings.isRtmpPlaybackEnabled());
 		appSettings.setRtmpPlaybackEnabled(false);
 
 
@@ -115,7 +117,7 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		JSONObject visibilityMatrix = (JSONObject) new JSONParser().parse("{\"default\":[\"default\"]}");
 
 		appSettings.setParticipantVisibilityMatrix(visibilityMatrix);
-		Map participantVisibilityMatrix = appSettings.getParticipantVisibilityMatrix();
+		Map<String, List<String>> participantVisibilityMatrix = appSettings.getParticipantVisibilityMatrix();
 		assertEquals(1, participantVisibilityMatrix.size());
 		JSONArray jsonArray = (JSONArray) participantVisibilityMatrix.get("default");
 		assertEquals("default", jsonArray.get(0));
@@ -186,6 +188,7 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 
 		//Try with new format settings
 		String newFormatEncoderSettingString ="[{\"videoBitrate\":"+videoBitrate1+",\"forceEncode\":"+forceEncode1+",\"audioBitrate\":"+audioBitrate1+",\"height\":"+height1+"},{\"videoBitrate\":"+videoBitrate2+",\"forceEncode\":"+forceEncode2+",\"audioBitrate\":"+audioBitrate2+",\"height\":"+height2+"},{\"videoBitrate\":"+videoBitrate3+",\"forceEncode\":"+forceEncode3+",\"audioBitrate\":"+audioBitrate3+",\"height\":"+height3+"}]";
+		String serializedEncoderSettingString ="[{\"videoBitrate\":"+videoBitrate1+",\"forceSameResolutionEncode\":false,\"forceEncode\":"+forceEncode1+",\"audioBitrate\":"+audioBitrate1+",\"height\":"+height1+"},{\"videoBitrate\":"+videoBitrate2+",\"forceSameResolutionEncode\":false,\"forceEncode\":"+forceEncode2+",\"audioBitrate\":"+audioBitrate2+",\"height\":"+height2+"},{\"videoBitrate\":"+videoBitrate3+",\"forceSameResolutionEncode\":false,\"forceEncode\":"+forceEncode3+",\"audioBitrate\":"+audioBitrate3+",\"height\":"+height3+"}]";
 
 		List<EncoderSettings> list = AppSettings.encodersStr2List(newFormatEncoderSettingString);
 
@@ -202,7 +205,7 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		assertEquals(300000, list.get(2).getVideoBitrate());
 		assertEquals(32000, list.get(2).getAudioBitrate());
 
-		assertEquals(newFormatEncoderSettingString, appSettings.encodersList2Str(list));
+		assertEquals(serializedEncoderSettingString, appSettings.encodersList2Str(list));
 
 		//Try with old format settings
 		String oldFormatEncoderSettingString = height1+"," + videoBitrate1 + "," + audioBitrate1
@@ -227,7 +230,17 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		list.get(0).setForceEncode(false);
 		list.get(1).setForceEncode(true);
 		list.get(2).setForceEncode(false);
-		assertEquals(newFormatEncoderSettingString, appSettings.encodersList2Str(list));
+		assertEquals(serializedEncoderSettingString, appSettings.encodersList2Str(list));
+
+		String newFormatEncoderSettingStringWithoutOptionalFlags =
+				"[{\"videoBitrate\":"+videoBitrate1+",\"audioBitrate\":"+audioBitrate1+",\"height\":"+height1+"}]";
+		list = AppSettings.encodersStr2List(newFormatEncoderSettingStringWithoutOptionalFlags);
+		assertEquals(1, list.size());
+		assertEquals(480, list.get(0).getHeight());
+		assertEquals(500000, list.get(0).getVideoBitrate());
+		assertEquals(128000, list.get(0).getAudioBitrate());
+		assertTrue(list.get(0).isForceEncode());
+		assertFalse(list.get(0).isForceSameResolutionEncode());
 	}
 
 
@@ -273,18 +286,18 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		appSettings.setMaxVideoTrackCount(10);
 		assertEquals(10, appSettings.getMaxVideoTrackCount());
 
-		int idleTimeOut = RandomUtils.nextInt();
+		int idleTimeOut = RandomUtils.insecure().randomInt();
 		appSettings.setOriginEdgeIdleTimeout(idleTimeOut);
 		assertEquals(idleTimeOut, appSettings.getOriginEdgeIdleTimeout());
 
 		appSettings.setAddDateTimeToHlsFileName(true);
-		assertEquals(true, appSettings.isAddDateTimeToHlsFileName());
+        assertTrue(appSettings.isAddDateTimeToHlsFileName());
 
 		appSettings.setPlayWebRTCStreamOnceForEachSession(false);
 		assertFalse(appSettings.isPlayWebRTCStreamOnceForEachSession());
 
 		appSettings.setStatsBasedABREnabled(false);
-		assertEquals(false, appSettings.isStatsBasedABREnabled());
+        assertFalse(appSettings.isStatsBasedABREnabled());
 		appSettings.setAbrDownScalePacketLostRatio(2);
 		assertEquals(2, appSettings.getAbrDownScalePacketLostRatio(), 0.0001);
 		appSettings.setAbrUpScalePacketLostRatio(0.2f);
@@ -308,9 +321,9 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		assertEquals("secretpublish", appSettings.getTimeTokenSecretForPublish());
 
 
-		assertEquals(false, appSettings.isHwScalingEnabled());
+        assertFalse(appSettings.isHwScalingEnabled());
 		appSettings.setHwScalingEnabled(false);
-		assertEquals(false, appSettings.isHwScalingEnabled());
+        assertFalse(appSettings.isHwScalingEnabled());
 
 		String apnKeyId = "apnkeyid";
 		appSettings.setApnKeyId(apnKeyId);
@@ -410,19 +423,19 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 
 		assertEquals(4, appSettings.getExcessiveBandwithTryCountBeforeSwitchback());
 		assertEquals(20, appSettings.getRttMeasurementDiffThresholdForSwitchback());
-		assertEquals(true, appSettings.isWriteStatsToDatastore());
-		assertEquals(false, appSettings.isDashMuxingEnabled());
+        assertTrue(appSettings.isWriteStatsToDatastore());
+        assertFalse(appSettings.isDashMuxingEnabled());
 		assertEquals("", appSettings.getListenerHookURL());
-		assertEquals(false, appSettings.isPreviewOverwrite());
+        assertFalse(appSettings.isPreviewOverwrite());
 		assertEquals(0, appSettings.getStreamFetcherBufferTime());
 		assertEquals("delete_segments+program_date_time", appSettings.getHlsflags());
 		assertEquals("/usr/local/antmedia/mysql", appSettings.getMySqlClientPath());
-		assertEquals(false, appSettings.isPlayTokenControlEnabled());
-		assertEquals(false, appSettings.isEnableTimeTokenForPlay());
+        assertFalse(appSettings.isPlayTokenControlEnabled());
+        assertFalse(appSettings.isEnableTimeTokenForPlay());
 		assertEquals("", appSettings.getMuxerFinishScript());
 		assertEquals(30, appSettings.getWebRTCFrameRate());
 		assertEquals("", appSettings.getTokenHashSecret());
-		assertEquals(false, appSettings.isHashControlPlayEnabled());
+        assertFalse(appSettings.isHashControlPlayEnabled());
 		assertEquals(60000, appSettings.getWebRTCPortRangeMax());
 		assertEquals(50000, appSettings.getWebRTCPortRangeMin());
 		assertEquals("", appSettings.getAllowedPublisherCIDR());
@@ -432,55 +445,55 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		assertEquals("", appSettings.getHttpForwardingExtension());
 		assertEquals("", appSettings.getHttpForwardingBaseURL());
 		assertEquals(1500, appSettings.getMaxAnalyzeDurationMS());
-		assertEquals(false, appSettings.isGeneratePreview());
-		assertEquals(true, appSettings.isDisableIPv6Candidates());
+        assertFalse(appSettings.isGeneratePreview());
+        assertTrue(appSettings.isDisableIPv6Candidates());
 		assertEquals("3", appSettings.getRtspPullTransportType());
 		assertEquals(5000, appSettings.getRtspTimeoutDurationMs());
 		assertEquals(0, appSettings.getMaxResolutionAccept());
-		assertEquals(true, appSettings.isH264Enabled());
-		assertEquals(false, appSettings.isVp8Enabled());
-		assertEquals(false, appSettings.isH265Enabled());
-		assertEquals(true, appSettings.isDataChannelEnabled());
+        assertTrue(appSettings.isH264Enabled());
+        assertFalse(appSettings.isVp8Enabled());
+        assertFalse(appSettings.isH265Enabled());
+        assertTrue(appSettings.isDataChannelEnabled());
 		assertEquals(0, appSettings.getRtmpIngestBufferTimeMs());
 		assertEquals("", appSettings.getDataChannelWebHookURL());
 		assertEquals(0, appSettings.getEncoderThreadCount());
 		assertEquals(0, appSettings.getEncoderThreadType());
 		assertEquals(1, appSettings.getVp8EncoderThreadCount());
 		assertEquals("unifiedPlan", appSettings.getWebRTCSdpSemantics());
-		assertEquals(true, appSettings.isDeleteDASHFilesOnEnded());
+        assertTrue(appSettings.isDeleteDASHFilesOnEnded());
 		assertEquals(360, appSettings.getHeightRtmpForwarding());
 		assertEquals(96000, appSettings.getAudioBitrateSFU());
-		assertEquals(true, appSettings.isAacEncodingEnabled());
+        assertTrue(appSettings.isAacEncodingEnabled());
 		assertEquals(-1, appSettings.getWebRTCViewerLimit());
 		assertEquals("", appSettings.getJwtSecretKey());
-		assertEquals(false, appSettings.isJwtControlEnabled());
-		assertEquals(true, appSettings.isIpFilterEnabled());
+        assertFalse(appSettings.isJwtControlEnabled());
+        assertTrue(appSettings.isIpFilterEnabled());
 		assertEquals(-1, appSettings.getIngestingStreamLimit());
 		assertEquals(60, appSettings.getTimeTokenPeriod());
-		assertEquals(false, appSettings.isPullWarFile());
+        assertFalse(appSettings.isPullWarFile());
 		assertEquals("", appSettings.getJwtStreamSecretKey());
-		assertEquals(false, appSettings.isPublishJwtControlEnabled());
-		assertEquals(false, appSettings.isPlayJwtControlEnabled());
+        assertFalse(appSettings.isPublishJwtControlEnabled());
+        assertFalse(appSettings.isPlayJwtControlEnabled());
 		assertEquals("", appSettings.getDashHttpEndpoint());
-		assertEquals(false, appSettings.isS3RecordingEnabled());
+        assertFalse(appSettings.isS3RecordingEnabled());
 		assertEquals("", appSettings.getS3SecretKey());
 		assertEquals("", appSettings.getS3AccessKey());
 		assertEquals("", appSettings.getS3RegionName());
 		assertEquals("", appSettings.getS3BucketName());
 		assertEquals("no-store, no-cache, must-revalidate, max-age=0", appSettings.getS3CacheControl());
 		assertEquals("", appSettings.getS3Endpoint());
-		assertEquals(false, appSettings.isForceDecoding());
-		assertEquals(true, appSettings.isAddOriginalMuxerIntoHLSPlaylist());
+        assertFalse(appSettings.isForceDecoding());
+        assertTrue(appSettings.isAddOriginalMuxerIntoHLSPlaylist());
 		assertEquals("", appSettings.getWebhookAuthenticateURL());
 		assertEquals("", appSettings.getVodUploadFinishScript());
 		assertEquals("%r%b", appSettings.getFileNameFormat());
-		assertEquals(false, appSettings.isSignalingEnabled());
+        assertFalse(appSettings.isSignalingEnabled());
 		assertEquals("", appSettings.getSignalingAddress());
-		assertEquals(false, appSettings.isMp4MuxingEnabled());
-		assertEquals(false, appSettings.isAddDateTimeToMp4FileName());
-		assertEquals(true, appSettings.isHlsMuxingEnabled());
-		assertEquals(true, appSettings.isWebRTCEnabled());
-		assertEquals(true, appSettings.isDeleteHLSFilesOnEnded());
+        assertFalse(appSettings.isMp4MuxingEnabled());
+        assertFalse(appSettings.isAddDateTimeToMp4FileName());
+        assertTrue(appSettings.isHlsMuxingEnabled());
+        assertTrue(appSettings.isWebRTCEnabled());
+        assertTrue(appSettings.isDeleteHLSFilesOnEnded());
 		assertEquals("15", appSettings.getHlsListSize());
 		assertEquals("", appSettings.getHlsPlayListType());
 		assertEquals(0, appSettings.getEncoderSettings().size());
@@ -492,20 +505,20 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		assertEquals("3.5", appSettings.getTargetLatency());
 		assertEquals("5", appSettings.getDashWindowSize());
 		assertEquals("5", appSettings.getDashExtraWindowSize());
-		assertEquals(true, appSettings.islLDashEnabled());
-		assertEquals(false, appSettings.islLHLSEnabled());
-		assertEquals(false, appSettings.isHlsEnabledViaDash());
-		assertEquals(false, appSettings.isUseTimelineDashMuxing());
+        assertTrue(appSettings.isLLDashEnabled());
+        assertFalse(appSettings.isLLHLSEnabled());
+        assertFalse(appSettings.isHlsEnabledViaDash());
+        assertFalse(appSettings.isUseTimelineDashMuxing());
 		assertEquals(2000, appSettings.getWebRTCKeyframeTime());
-		assertEquals(true, appSettings.isDashHttpStreaming());
+        assertTrue(appSettings.isDashHttpStreaming());
 		assertEquals("streams", appSettings.getS3StreamsFolderPath());
 		assertEquals("previews", appSettings.getS3PreviewsFolderPath());
 		assertEquals("public-read", appSettings.getS3Permission());
 		assertEquals("127.0.0.1", appSettings.getRemoteAllowedCIDR());
-		assertEquals(false, appSettings.isWebMMuxingEnabled());
+        assertFalse(appSettings.isWebMMuxingEnabled());
 		assertEquals("", appSettings.getEncoderSettingsString());
 		assertEquals("127.0.0.1", appSettings.getAllowedCIDRList().poll().toString());
-		assertEquals(false, appSettings.isUseOriginalWebRTCEnabled());
+        assertFalse(appSettings.isUseOriginalWebRTCEnabled());
 		assertEquals(5000, appSettings.getCreatePreviewPeriod());
 		assertEquals("stun:stun1.l.google.com:19302", appSettings.getStunServerURI());
 		assertEquals("", appSettings.getEncoderName());
@@ -514,44 +527,44 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		assertEquals("", appSettings.getAppName());
 		assertEquals(0, appSettings.getGopSize());
 		assertEquals("", appSettings.getJwksURL());
-		assertEquals(false, appSettings.isWebRTCTcpCandidatesEnabled());
-		assertEquals(false, appSettings.isForceAspectRatioInTranscoding());
+        assertFalse(appSettings.isWebRTCTcpCandidatesEnabled());
+        assertFalse(appSettings.isForceAspectRatioInTranscoding());
 		assertEquals(2000, appSettings.getEndpointHealthCheckPeriodMs());
-		assertEquals(false, appSettings.isAcceptOnlyStreamsInDataStore());
-		assertEquals(false, appSettings.isAcceptOnlyRoomsInDataStore());
+        assertFalse(appSettings.isAcceptOnlyStreamsInDataStore());
+        assertFalse(appSettings.isAcceptOnlyRoomsInDataStore());
 		assertEquals(0, appSettings.getRestartStreamFetcherPeriod());
-		assertEquals(false, appSettings.isPublishTokenControlEnabled());
-		assertEquals(false, appSettings.isEnableTimeTokenForPublish());
-		assertEquals(false, appSettings.isHashControlPublishEnabled());
+        assertFalse(appSettings.isPublishTokenControlEnabled());
+        assertFalse(appSettings.isEnableTimeTokenForPublish());
+        assertFalse(appSettings.isHashControlPublishEnabled());
 		assertEquals(0, appSettings.getAllowedPublisherCIDRList().size());
 		assertEquals("gpu_and_cpu", appSettings.getEncoderSelectionPreference());
 		assertEquals(3, appSettings.getExcessiveBandwidthCallThreshold());
-		assertEquals(false, appSettings.isExcessiveBandwidthAlgorithmEnabled());
+        assertFalse(appSettings.isExcessiveBandwidthAlgorithmEnabled());
 		assertEquals(10, appSettings.getPacketLossDiffThresholdForSwitchback());
-		assertEquals(false, appSettings.isReplaceCandidateAddrWithServerAddr());
+        assertFalse(appSettings.isReplaceCandidateAddrWithServerAddr());
 		assertEquals("all", appSettings.getDataChannelPlayerDistribution());
 		assertEquals(10000, appSettings.getWebRTCClientStartTimeoutMs());
-		assertEquals(false, appSettings.isStartStreamFetcherAutomatically());
+        assertFalse(appSettings.isStartStreamFetcherAutomatically());
 		assertEquals("", appSettings.getHlsEncryptionKeyInfoFile());
 		assertEquals("", appSettings.getWarFileOriginServerAddress());
 		assertEquals("", appSettings.getContentSecurityPolicyHeaderValue());
 		assertEquals("", appSettings.getTurnServerCredential());
 		assertEquals("", appSettings.getTurnServerUsername());
 		assertEquals("", appSettings.getHlsHttpEndpoint());
-		assertEquals(false, appSettings.isRtmpPlaybackEnabled());
+        assertFalse(appSettings.isRtmpPlaybackEnabled());
 		assertEquals(-1, appSettings.getMaxAudioTrackCount());
 		assertEquals(-1, appSettings.getMaxVideoTrackCount());
 		assertEquals(2, appSettings.getOriginEdgeIdleTimeout());
-		assertEquals(false, appSettings.isAddDateTimeToHlsFileName());
-		assertEquals(true, appSettings.isPlayWebRTCStreamOnceForEachSession());
-		assertEquals(true, appSettings.isStatsBasedABREnabled());
+        assertFalse(appSettings.isAddDateTimeToHlsFileName());
+        assertTrue(appSettings.isPlayWebRTCStreamOnceForEachSession());
+        assertTrue(appSettings.isStatsBasedABREnabled());
 		assertEquals(1, appSettings.getAbrDownScalePacketLostRatio(), 0.0001);
 		assertEquals(0.1, appSettings.getAbrUpScalePacketLostRatio(), 0.0001);
 		assertEquals(30, appSettings.getAbrUpScaleJitterMs(), 0.0001);
 		assertEquals(150, appSettings.getAbrUpScaleRTTMs(), 0.0001);
 		assertNotNull(appSettings.getClusterCommunicationKey());
-		assertEquals(false, appSettings.isId3TagEnabled());
-		assertEquals(false, appSettings.isSendAudioLevelToViewers());
+        assertFalse(appSettings.isId3TagEnabled());
+        assertFalse(appSettings.isSendAudioLevelToViewers());
 		assertNull(appSettings.getTimeTokenSecretForPublish());
 		assertNull(appSettings.getTimeTokenSecretForPlay());
 
@@ -591,7 +604,7 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		
 		assertEquals(4, trackSelectionMode.size());
 		assertEquals(1, trackSelectionMode.get("default").size());
-		assertEquals(Arrays.asList("default"), trackSelectionMode.get("default"));
+		assertEquals(List.of("default"), trackSelectionMode.get("default"));
 		
 		assertEquals(2, trackSelectionMode.get("speaker").size());
 		assertEquals(Arrays.asList("speaker", "active_attendee"), trackSelectionMode.get("speaker"));
@@ -603,7 +616,7 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		assertEquals(Arrays.asList("active_attendee", "speaker"), trackSelectionMode.get("active_attendee"));
 
 
-		Map map = appSettings.getCustomSettings();
+		Map<String, Object> map = appSettings.getCustomSettings();
 		assertNotNull(map);
 		assertEquals(0, map.size());
 
@@ -668,19 +681,25 @@ public class AppSettingsUnitTest extends AbstractJUnit4SpringContextTests {
 		assertEquals("", appSettings.getStreamStartedScript());
 		assertEquals("", appSettings.getStreamEndedScript());
 		assertEquals("", appSettings.getStreamIdleTimeoutScript());
+		assertTrue(appSettings.isHwDecoderEnabled());
+		appSettings.setHwDecoderEnabled(false);
+		assertFalse(appSettings.isHwDecoderEnabled());
 
 		
 		assertFalse(appSettings.isAv1Enabled());
 		appSettings.setAv1Enabled(true);
 		assertTrue(appSettings.isAv1Enabled());
-		
+
+		assertFalse(appSettings.isDisableAudio());
+		appSettings.setDisableAudio(true);
+		assertTrue(appSettings.isDisableAudio());
+
 		//if we add a new field, we just need to check its default value in this test
 		//When a new field is added or removed please update the number of fields and make this test pass
 		//by also checking its default value. 
 
-		assertEquals("New field is added to settings. PAY ATTENTION: Please CHECK ITS DEFAULT VALUE and fix the number of fields.", 
-
-				183, numberOfFields);
+		assertEquals(186,
+				numberOfFields, "New field is added to settings. PAY ATTENTION: Please CHECK ITS DEFAULT VALUE and fix the number of fields.");
 	}
 
 
